--- a/style.css
+++ b/style.css
@@ -3,9 +3,17 @@
     margin: 0;
     text-decoration: none;
 }
+@font-face {
+    font-family: 'Body';
+    src: url('./font/Inter-VariableFont.ttf') format('truetype');
+    font-weight: 100 900;
+    /* Plage de poids pour le font variable */
+    font-style: normal;
+}
 
 body{
     background-color: #051436;
+    font-family: "Body";
 }
 
 .main{
@@ -25,5 +33,117 @@ body{
 
     @media screen and (max-width: 1353px) {
         width: 90%;
+    }
+}
+
+/* Navbar */
+.Navbar{
+    position: fixed;
+    z-index: 10;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    
+    max-width: fit-content;
+    padding: 10px 14px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: auto;
+    bottom: 2%;
+    
+    background: rgba(5, 20, 54, 0.26);
+    border: 1px solid rgba(237, 243, 255, 0.30);
+    border-radius: 10px;
+    backdrop-filter: blur(20px);
+}
+.Navbar img{
+    position: absolute;
+    right: 100px;
+    top: -19px;
+}
+
+.Navbar .Container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+}
+
+.Container p{
+    color: #EDF3FF;
+    font-size: 1rem;
+    text-align: center;
+    width: 300px;
+}
+
+.Container .Menus{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 14px;
+
+    width: 100%;
+}
+
+.Button{
+    display: flex;
+    align-items: center;
+
+    padding: 12px 20px;
+    background: #EDF3FF;
+
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #051436;
+    border-radius: 6px;
+}
+
+.Inactive{
+    background: rgba(237, 243, 255, 0.10);
+    color: #EDF3FF;
+    font-weight: 400;
+
+    &:hover{
+        background: rgba(237, 243, 255, 0.30);
+    }
+}
+
+/* Queries */
+@media screen and (max-width: 720px) {
+    .Navbar {
+        max-width: 30rem;
+    }
+
+    .Navbar img{
+        right: 92px;
+    }
+
+    .Container .Menus{
+        justify-content: space-between;
+    }
+
+    .Container p{
+        font-size: 12px;
+        width: 232px;
+    }
+
+    .Button{
+        font-size: 10px;
+        padding: 10px 20px;
+    }
+}
+
+@media screen and (max-width: 494px){
+    .Navbar{
+        max-width: 82%;
+    }
+    .Navbar img{
+        right: 78px;
     }
 }
