--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     padding-top: 3%;
     padding-bottom: 4%;
 
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     gap: 20px;
@@ -102,6 +102,7 @@ body{
     font-weight: 600;
     color: #051436;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .Inactive{
@@ -114,8 +115,8 @@ body{
     }
 }
 /* Mwendo */
-#mwendo{
-    display: none;
+#MainStep{
+    display: flex ;
 }
 
 
